--- a/index.css
+++ b/index.css
@@ -1,9 +1,7 @@
 :root {
-  --cor-primaria: #16f03a;
-}
-
-button {
-  background-color: var(--cor-primaria);
+  --cor-negativa: #812020;
+  --cor-positiva: #208140;
+  --cor-carta: #f5f5f5;
 }
 
 
@@ -20,14 +18,62 @@ html {
   box-sizing: inherit;
 }
 
-.card {}
 
-.card__image {}
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-.card__text {}
+li {
+  list-style: none;
+  flex-grow: 4;
+  flex-shrink: 2;
+  flex-basis: 5rem;
+}
 
-.card__button {}
+.card {
+  display: flex;
+  border-radius: 1.5rem;
+  box-shadow: .5rem .5rem rgba(0, 0, 0, .12);
+  flex-direction: column;
+  margin: 5rem;
+  padding: 2rem;
+  background-color: var(--cor-carta);
+  align-items: center;
+}
 
-.card__button--yes {}
+.card__image {
+  padding: .4rem;
+}
 
-.card__button--no {}
+.card__text {
+  margin: 3rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+}
+
+.card__button {
+  color: white;
+  width: 5rem;
+  text-decoration: none;
+  border: none;
+  margin: .4rem;
+  padding: 1rem;
+  border-radius: .2rem;
+  font-size: 2rem;
+  text-align: center;
+  width: 7rem;
+}
+
+.card__button--yes {
+  background-color: var(--cor-positiva);
+}
+
+.card__button--no {
+  background-color: var(--cor-negativa);
+}
+
+.card__button--flex {
+  display: flex;
+  flex-direction: row;
+}
